--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -30,7 +30,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="?attr/actionBarSize"
                 app:layout_scrollFlags="scroll|enterAlways|snap"
-                app:menu="@menu/day_menu"
+                app:menu="@menu/platform_menu"
                 app:titleTextColor="@color/black" />
         </com.google.android.material.appbar.AppBarLayout>
 
