--- a/app/src/main/res/layout/fragment_main.xml
+++ b/app/src/main/res/layout/fragment_main.xml
@@ -1,4 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
+<layout>
+    <data>
+        <variable
+            name="item"
+            type="String" />
+    </data>
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -17,7 +23,8 @@
         android:id="@+id/fragment_tv"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="프래그먼트립니다!!!!!!!!!!!"/>
+        android:text="@{item}"/>
 
 </LinearLayout>
 </FrameLayout>
+</layout>
