feat: 웹툰 플랫폼 추가, 프그먼트 배경색 추가, 플랫폼선택시 데이터 최신화구현

--- a/app/src/main/res/menu/platform_menu.xml
+++ b/app/src/main/res/menu/platform_menu.xml
@@ -12,5 +12,9 @@
         android:title="카카오"
         app:showAsAction="always" />
 
+    <item
+        android:id="@+id/menu_kakao_page"
+        android:title="카카오페이지"
+        app:showAsAction="always" />
 
 </menu>
