--- a/app/src/main/res/layout/activity_web_view.xml
+++ b/app/src/main/res/layout/activity_web_view.xml
@@ -13,7 +13,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         app:title="웹뷰"
-        android:background="#E91E63"
+        android:background="@color/web_view_toolbar_background"
         android:textAlignment="center"/>
 
     <WebView
