--- a/app/src/main/res/layout/layout_webtoon_item.xml
+++ b/app/src/main/res/layout/layout_webtoon_item.xml
@@ -1,19 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
-
     <data>
         <variable
             name="webtoonItem"
             type="com.example.webtoonhub.model.WebToonData" />
     </data>
-
     <androidx.cardview.widget.CardView
         android:layout_width="match_parent"
         android:layout_height="250dp"
         android:layout_margin="10dp"
-        app:cardElevation="10dp"
-        app:cardCornerRadius="10dp">
+        app:cardCornerRadius="10dp"
+        app:cardElevation="10dp">
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
@@ -25,35 +23,35 @@
                 android:layout_height="200dp"
                 android:scaleType="centerCrop"
                 android:src="@{webtoonItem.thumbnail}"
-                app:layout_constraintTop_toTopOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
-                />
-            <!--
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent" />
 
-            setPhotoImage="@{photoItem.thumbnail}"
-            android:src="@drawable/ic_baseline_insert_photo_24"-->
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:layout_marginTop="5dp"
                 android:orientation="vertical"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintStart_toStartOf="parent">
-            <TextView
-                android:id="@+id/webtoon_title"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="@{webtoonItem.title}"
-                android:layout_margin="5dp" />
-            <TextView
-                android:id="@+id/webtoon_author"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="@{webtoonItem.author}"
-                android:layout_margin="5dp"/>
+
+                <TextView
+                    android:id="@+id/webtoon_title"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_margin="5dp"
+                    android:text="@{webtoonItem.title}"
+                    android:textStyle="bold" />
+
+                <TextView
+                    android:id="@+id/webtoon_author"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginLeft="5dp"
+                    android:layout_marginBottom="5dp"
+                    android:text="@{webtoonItem.author}" />
 
             </LinearLayout>
         </androidx.constraintlayout.widget.ConstraintLayout>
-
     </androidx.cardview.widget.CardView>
 </layout>
