feat: 검색기능 추가, 스테이터스바 디자인 변경, 통신에 간헐적 null값 예외처리, 웹뷰 액티비티 start시 전역 인스턴스 사용

--- a/app/src/main/res/layout/layout_webtoon_item.xml
+++ b/app/src/main/res/layout/layout_webtoon_item.xml
@@ -8,10 +8,11 @@
     </data>
     <androidx.cardview.widget.CardView
         android:layout_width="match_parent"
-        android:layout_height="250dp"
+        android:layout_height="200dp"
         android:layout_margin="10dp"
         app:cardCornerRadius="10dp"
-        app:cardElevation="10dp">
+        app:cardElevation="10dp"
+        android:id="@+id/item_layout_id">
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
@@ -20,12 +21,22 @@
             <ImageView
                 android:id="@+id/webtoon_thumbnail"
                 android:layout_width="match_parent"
-                android:layout_height="200dp"
+                android:layout_height="150dp"
                 android:scaleType="centerCrop"
                 android:src="@{webtoonItem.thumbnail}"
+                android:adjustViewBounds="true"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent" />
+                app:layout_constraintTop_toTopOf="parent"
+                android:visibility="visible"/>
+            <WebView
+                android:id="@+id/wb_img"
+                android:layout_width="match_parent"
+                android:layout_height="150dp"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent"
+                android:visibility="gone"/>
 
             <LinearLayout
                 android:layout_width="match_parent"
@@ -36,6 +47,7 @@
                 app:layout_constraintStart_toStartOf="parent">
 
                 <TextView
+                    android:singleLine="true"
                     android:id="@+id/webtoon_title"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
@@ -44,9 +56,11 @@
                     android:textStyle="bold" />
 
                 <TextView
+                    android:singleLine="true"
                     android:id="@+id/webtoon_author"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:textSize="10dp"
                     android:layout_marginLeft="5dp"
                     android:layout_marginBottom="5dp"
                     android:text="@{webtoonItem.author}" />
