--- a/app/src/main/res/layout/layout_webtoon_item.xml
+++ b/app/src/main/res/layout/layout_webtoon_item.xml
@@ -1,71 +1,112 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
+
     <data>
+
         <variable
             name="webtoonItem"
             type="com.example.webtoonhub.model.WebToonData" />
     </data>
+
     <androidx.cardview.widget.CardView
+        android:id="@+id/item_layout_id"
         android:layout_width="match_parent"
         android:layout_height="200dp"
         android:layout_margin="10dp"
         app:cardCornerRadius="10dp"
-        app:cardElevation="10dp"
-        android:id="@+id/item_layout_id">
+        app:cardElevation="10dp">
 
-        <androidx.constraintlayout.widget.ConstraintLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent">
-
-            <ImageView
-                android:id="@+id/webtoon_thumbnail"
-                android:layout_width="match_parent"
-                android:layout_height="150dp"
-                android:scaleType="centerCrop"
-                android:src="@{webtoonItem.thumbnail}"
-                android:adjustViewBounds="true"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent"
-                android:visibility="visible"/>
-            <WebView
-                android:id="@+id/wb_img"
-                android:layout_width="match_parent"
-                android:layout_height="150dp"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent"
-                android:visibility="gone"/>
 
             <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="5dp"
-                android:orientation="vertical"
-                app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintStart_toStartOf="parent">
+                android:layout_height="match_parent"
+                android:orientation="vertical">
 
-                <TextView
-                    android:singleLine="true"
-                    android:id="@+id/webtoon_title"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_margin="5dp"
-                    android:text="@{webtoonItem.title}"
-                    android:textStyle="bold" />
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:layout_weight="1"
+                    android:orientation="horizontal">
 
-                <TextView
-                    android:singleLine="true"
-                    android:id="@+id/webtoon_author"
-                    android:layout_width="wrap_content"
+                    <ImageView
+                        android:id="@+id/webtoon_thumbnail"
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:adjustViewBounds="true"
+                        android:scaleType="centerCrop"
+                        android:src="@{webtoonItem.thumbnail}"
+                        android:visibility="visible" />
+                    <WebView
+                        android:id="@+id/wb_img"
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:visibility="gone" />
+                </LinearLayout>
+
+
+                <LinearLayout
+                    android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:textSize="10dp"
-                    android:layout_marginLeft="5dp"
-                    android:layout_marginBottom="5dp"
-                    android:text="@{webtoonItem.author}" />
+                    android:layout_marginTop="5dp"
+                    android:orientation="vertical"
+                    >
+
+                    <TextView
+                        android:id="@+id/webtoon_title"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_margin="5dp"
+                        android:layout_weight="1"
+                        android:singleLine="true"
+                        android:text="@{webtoonItem.title}"
+                        android:textStyle="bold" />
+
+                    <TextView
+                        android:id="@+id/webtoon_author"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginLeft="5dp"
+                        android:layout_marginBottom="5dp"
+                        android:layout_weight="1"
+                        android:singleLine="true"
+                        android:text="@{webtoonItem.author}"
+                        android:textSize="10dp" />
+
+                    <LinearLayout
+                        android:id="@+id/additional_layout"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginEnd="1dp"
+                        android:layout_marginBottom="1dp"
+                        android:layout_weight="1"
+                        android:gravity="center_vertical"
+                        android:orientation="horizontal"
+                        android:paddingHorizontal="1dp"
+                        android:visibility="gone">
+
+                        <ImageView
+                            android:id="@+id/new_img"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_marginEnd="1dp"
+                            android:padding="1dp"
+                            android:src="@drawable/ic_baseline_new_24"
+                            android:visibility="gone"/>
+
+                        <ImageView
+                            android:id="@+id/update_img"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_marginEnd="1dp"
+                            android:padding="1dp"
+                            android:src="@drawable/ic_baseline_update_24"
+                             android:visibility="gone"/>
+
+                    </LinearLayout>
+                </LinearLayout>
 
             </LinearLayout>
-        </androidx.constraintlayout.widget.ConstraintLayout>
+
     </androidx.cardview.widget.CardView>
 </layout>
