--- a/app/src/main/res/layout/fragment_main.xml
+++ b/app/src/main/res/layout/fragment_main.xml
@@ -13,7 +13,9 @@
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/my_webtoon_recycler_view"
             android:layout_width="match_parent"
-            android:layout_height="match_parent" />
+            android:layout_height="match_parent"
+            android:scrollbars="vertical"
+            android:scrollbarFadeDuration="0"/>
 
     </LinearLayout>
 </FrameLayout>
