--- a/app/src/main/res/layout/fragment_main.xml
+++ b/app/src/main/res/layout/fragment_main.xml
@@ -15,7 +15,8 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:scrollbars="vertical"
-            android:scrollbarFadeDuration="0"/>
+            android:scrollbarFadeDuration="0"
+            tools:listitem="@layout/layout_webtoon_item"/>
 
     </LinearLayout>
 </FrameLayout>
