feat : MainActivity에 state 패턴 적용, 로딩 애니메이션 추가
1. state패턴을 적용하여 통신 상태 식별
2. 통신 성공 전(프래그먼트 전환전)에는 loading 애니매이션 적용
-

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -42,11 +42,23 @@
                 android:layout_height="wrap_content">
             </com.google.android.material.tabs.TabLayout>
         </LinearLayout>
-
+        <com.airbnb.lottie.LottieAnimationView
+            android:id="@+id/change_loading_image"
+            android:layout_width="match_parent"
+            android:layout_height="200sp"
+            android:layout_marginTop="50sp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:lottie_loop="true"
+            app:lottie_rawRes="@raw/change_loading_lottie"
+            android:visibility="invisible"/>
         <androidx.viewpager2.widget.ViewPager2
             android:id="@+id/view_pager"
             android:layout_width="match_parent"
             android:layout_height="match_parent" />
+
 
     </LinearLayout>
 </androidx.constraintlayout.widget.ConstraintLayout>
